# Hako

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: pr.yml
src/: crash_handler.rs  main.rs
src/account/: mod.rs
src/config/: game.rs  launcher.rs  manager.rs  mod.rs
src/core/: logger.rs  mod.rs  paths.rs  state.rs
src/game/: args.rs  classpath.rs  instance.rs  java.rs  mod.rs  natives.rs  profile.rs
src/net/: download.rs
src/platform/: paths.rs
src/storage/: config.rs
src/task/: error.rs  executor.rs  handle.rs  lock.rs  main_task.rs  manager.rs  mod.rs  priority.rs  sub_task.rs
src/task/game/: download.rs  mod.rs  start.rs
src/ui/: app.rs  config.rs  mod.rs  root.rs  router.rs
src/ui/components/: navbar.rs  topbar.rs
src/ui/theme/: generator.rs  mod.rs  palette.rs
src/ui/views/: download.rs  home.rs  instances.rs  mod.rs  settings.rs  tasks.rs
src/ui/widgets/: mod.rs  navbar.rs  window_frame.rs
src/utils/: error.rs  logger.rs  mod.rs
