[package]
name = "hako"
description = "A simple Minecraft Launcher"
version = "0.0.4"
authors = ["yamrc <yamrci@outlook.com>"]
homepage = "https://github.com/kiruio/hako"
keywords = ["minecraft", "launcher"]
license = "MIT"
edition = "2024"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
chrono = "0.4.41"
env_logger = "0.11.8"
iced = { git = "https://github.com/iced-rs/iced", branch = "master", default-features = false, features = [
    "tiny-skia",
    "thread-pool",
    "crisp",
] }
log = "0.4.29"

[build-dependencies]
winres = "0.1.12"
