[package]
name = "Hako"
version = "0.0.0"
edition = "2024"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
dirs = "6.0.0"
gpui = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.23.0"
