[package]
name = "Hako"
version = "0.1.2"
edition = "2024"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
gpui = "0.2.2"
gpui-router = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "v5"] }
reqwest = { version = "0.12.28", features = ["stream", "rustls-tls"] }
sha2 = "0.10.8"
hex = "0.4.3"
regex = "1.11.1"
zip = "7.0"
once_cell = "1.20.2"
futures-util = "0.3.31"
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3.24.0"
